--- a/composer.json
+++ b/composer.json
@@ -32,16 +32,15 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "firebase/php-jwt": "^5.2",
         "google/apiclient": "^2.13",
         "guzzlehttp/guzzle": "^7.0.1",
-        "illuminate/database": "^10.0",
-        "illuminate/support": "^10.0"
+        "illuminate/database": "^9.0",
+        "illuminate/support": "^9.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0",
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^9.0"
     },
     "extra": {
         "laravel": {
