--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "php": "^8.0",
         "firebase/php-jwt": "^6.3.1",
         "google/apiclient": "^2.13",
+        "stripe/stripe-php": "^7.57",
         "guzzlehttp/guzzle": "^7.0.1",
         "illuminate/database": "^9.0",
         "illuminate/support": "^9.0"
