--- a/composer.json
+++ b/composer.json
@@ -37,11 +37,11 @@
         "google/apiclient": "^2.13",
         "stripe/stripe-php": "^7.57",
         "guzzlehttp/guzzle": "^7.0.1",
-        "illuminate/database": "^9.0",
-        "illuminate/support": "^9.0"
+        "illuminate/database": "^9.0 | ^10.0",
+        "illuminate/support": "^9.0 | ^10.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0 | ^10.0"
     },
     "extra": {
         "laravel": {
